Fixed footer alignment

--- a/styles.css
+++ b/styles.css
@@ -261,7 +261,9 @@ Tech Stack
   width: 100%;
   max-width: 100px;
   transition: all 300ms;
+
 }
+
 .language .language__img:hover {
   filter: brightness(80%);
   opacity: 0.86;
@@ -284,8 +286,9 @@ Tech Stack
   bottom: 0;
   transform: scale(0);
   transition: all 300ms;
-  font-size: 15px;
+  font-size: 20px;
   font-style: italic;
+  
 }
 .language:hover .language__name {
   transform: scale(1);
@@ -368,11 +371,9 @@ Projects
   text-align: left;
   color: whitesmoke;
 }
-/* 
 
-Footer
+/*     Footer      */
 
-*/
 footer {
   background-color: #242424;
 }
@@ -390,7 +391,7 @@ footer {
 }
 .footer__social--list {
   width: 100%;
-  max-width: 500px;
+  max-width: 1000px;
   display: flex;
   justify-content: space-around;
   margin-bottom: 28px;
@@ -399,7 +400,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   padding: 8% 0;
 }
 .footer__copyright {
